<resources>
    <string name="app_name">Q&amp;A</string>

    <!-- IMPORTANT: Replace this with your real Web Client ID from Google Cloud Console -->
    <string name="default_web_client_id">316253336830-74omkii0igd9qh7l6tmsst6nbkhe4od8.apps.googleusercontent.com</string>

    <string name="full_app_name">Question and Answer</string>
    <string name="enter_game_name">Enter Game Name</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="Start_Game_Btn">Start Game</string>
    <string name="Login_Sign_up_Btn">Login/Sign up</string>
    <string name="Setting_Btn">Setting</string>
    <string name="Contact_us_Btn">Contact us</string>
    <string name="Rule_and_policy_Btn">Rule and policy</string>
    <string name="language">English</string>


    <!--Rules Text-->


    <string name="rules_title">Game Rules</string>
    <string name="rules_overview_title">Overview</string>
    <string name="rules_points_title">Points</string>
    <string name="rules_gameplay_title">Gameplay</string>
    <string name="rules_bonus_title">Bonus Rule</string>
    <string name="rules_endgame_title">End of Game</string>


    <string name="rules_overview_text">
        • Two teams compete in a Q&amp;A challenge.\n
        • The game has 6 categories.\n
        • Each category contains 3 difficulty levels + 1 bonus question.
    </string>


    <string name="rules_points_text">
        • Easy question: 200 points\n
        • Medium question: 400 points\n
        • Hard question: 600 points\n
        • Bonus question: difficulty chosen by player
    </string>

    <string name="rules_gameplay_text">
        • Choose a category.\n
        • Pick a difficulty.\n
        • A timer starts for players to discuss.\n
        • Team locks in an answer.\n
        • Both teams answer, then tap Reveal Answer.\n
        • Correct team is awarded points.
    </string>

    <string name="rules_bonus_text">
        • Bonus unlocks previously answered questions.\n
        • You can pick another question of the same difficulty.\n
        • Bonus can only be used once per category.
    </string>

    <string name="rules_endgame_text">
        • Game ends when all questions are answered.\n
        • Final scores are shown.\n
        • If logged in, results are saved.
    </string>
    <string name="title_activity_login_test">LoginTest</string>
    <string name="app_widget_description">My App Widget</string>

    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
    <string name="no_word_qr_title">Let one player scan this QR code</string>
    <string name="start_acting_button">Start acting</string>
    <string name="ready_to_act_button">Ready to act -></string>
    <string name="start_button">Start</string>
    <string name="login_signup_title">Login / Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="or_divider">OR</string>
    <string name="google_signin_button">Sign in with Google</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name="team_1_score_default">0</string>
    <string name="team_2_score_default">0</string>
    <string name="cars_category">Cars</string>
    <string name="common_knowledge_category">Common Knowledge</string>
    <string name="sports_category">Sports</string>
    <string name="geography_category">Geography</string>
    <string name="flags_countries_category">Flags &amp; Countries</string>
    <string name="no_word_category">No Word</string>
    <string name="history_category">History</string>
    <string name="movies_category">Movies</string>
    <string name="science_category">Science</string>
    <string name="bonus_button">bonus !</string>
    <string name="points_200">200</string>
    <string name="points_400">400</string>
    <string name="points_600">600</string>
    <string name="no_word_act_timer_default">01:30</string>
    <string name="no_word_act_instruction">Start acting this word without speaking</string>
    <string name="reveal_answer_button">Reveal Answer</string>
    <string name="question_view_timer_default">00:00</string>
    <string name="question_placeholder">Question will be displayed here</string>
    <string name="team_a_score_label">Team A: %1$d</string>
    <string name="team_b_score_label">Team B: %1$d</string>
    <string name="question_points_label">%1$s : %2$d</string>
    <string name="right_answer_prompt">The right answer is :</string>
    <string name="who_got_it_right">Who got it right?</string>
    <string name="none_got_it_right">None Got It Right</string>
    <string name="main_game_team1_name">Team1</string>
    <string name="main_game_game_name">Game Name</string>
    <string name="loading_content_description">Loading</string>
    <string name="loading_text">Loading...</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="settings_title">Settings</string>
    <string name="theme_label">Theme</string>
    <string name="swedish_label">Swedish</string>
    <string name="logout_button_text">Log out</string>
    <string name="winner_congrats">WINNER!</string>
    <string name="back_to_menu_button_text">Back to menu</string>
    <string name="trophy_content_description">Trophy</string>

    <string name="select_categories_title">Choose Your Categories</string>
    <string name="select_categories_instruction">Both teams pick 6 categories together for this match.</string>
    <string name="select_categories_counter">%1$d / %2$d selected</string>
    <string name="select_categories_limit_reached">You can only pick %1$d categories. Deselect one first.</string>



    <string name="team_correct_format">%1$s Correct</string>


    <string name="dialog_leave_match_title">Leave match?</string>
    <string name="dialog_leave_match_positive">Leave</string>
    <string name="dialog_leave_match_negative">Cancel</string>
    <string name="loading_default">Loading...</string>
    <string name="dialog_leave_match_message">If you go back, the current match will end and you will need to start a new one.</string>

</resources>
